// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageBlock shows a page with information about a certain block 1`] = `
<tmpage-stub
  data-title="Block"
  hideheader="true"
  loading="true"
  managed="true"
  subtitle=""
  title=""
>
  <template>
    <div
      class="block"
    >
      <h2
        class="page-profile__title"
      >
        Block --
      </h2>
    </div>
     
    <ul
      class="row"
    >
      <li>
        <h4>
          Chain ID
        </h4>
         
        <span
          class="page-data"
        >
          
        </span>
      </li>
       
      <li>
        <h4>
          Time
        </h4>
         
        <span
          class="page-data"
        >
          --
        </span>
      </li>
    </ul>
     
    <div
      class="row"
    >
      <div
        class="column"
      >
        <h3
          class="page-profile__section-title"
        >
          
          Transactions ()
        
        </h3>
         
        <!---->
         
        <transactionlist-stub
          address=""
          transactions="[object Object],[object Object],[object Object]"
          validators="[object Object]"
        />
         
        <br />
      </div>
    </div>
  </template>
</tmpage-stub>
`;

exports[`PageBlock shows the block page with no txs 1`] = `
<tmpage-stub
  data-title="Block"
  hideheader="true"
  loading="true"
  managed="true"
  subtitle=""
  title=""
>
  <template>
    <div
      class="block"
    >
      <h2
        class="page-profile__title"
      >
        Block --
      </h2>
    </div>
     
    <ul
      class="row"
    >
      <li>
        <h4>
          Chain ID
        </h4>
         
        <span
          class="page-data"
        >
          
        </span>
      </li>
       
      <li>
        <h4>
          Time
        </h4>
         
        <span
          class="page-data"
        >
          --
        </span>
      </li>
    </ul>
     
    <div
      class="row"
    >
      <div
        class="column"
      >
        <h3
          class="page-profile__section-title"
        >
          
          Transactions ()
        
        </h3>
         
        <tmdatamsg-stub
          icon="info_outline"
        >
          <div>
            
            No Transactions
          
          </div>
           
          <div>
            
            This block doesn't contain any transactions.
          
          </div>
        </tmdatamsg-stub>
         
        <transactionlist-stub
          address=""
          transactions=""
          validators="[object Object]"
        />
         
        <br />
      </div>
    </div>
  </template>
</tmpage-stub>
`;
